# HeatEquationMPI

./: CMakeLists.txt  main.c
